# NFT-minter-Solana

./: .env  .gitignore  Anchor.toml  package-lock.json  package.json  tsconfig.json  wallet.keypair
programs/nft-mint/: Cargo.toml
programs/nft-mint/src/: lib.rs
src/: main.rs
src/client/: main.ts  metaplex_anchor_nft.ts
src/program-rust/: Cargo.toml
src/program-rust/src/: lib.rs
src/program-rust/tests/: lib.rs
src/tests/: test.ts
tests/: metaplex-anchor-nft.ts  nft-mint.ts
