[package]
name = "nft_mint"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft_mint"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
borsh = "0.9.3"
mpl-token-metadata = {version = "1.2.5", features = ["no-entrypoint"]}
