
[package]
name = "metaplex-anchor-nft"
version = "0.1.0"
description = "Created with Anchor"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.1"
solana-program = "~1.9.13"
anchor-lang = "0.24.2"
mpl-token-metadata = { version="1.2.5", features = [ "no-entrypoint" ] }
anchor-spl = "0.24.2"

[dev-dependencies]
solana-program-test = "~1.9.13"
solana-sdk = "~1.9.13"

[lib]
name = "metaplex_anchor_nft"
crate-type = ["cdylib", "lib"]